; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_append_sendbuffer.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_append_sendbuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket_server = type { i32 }
%struct.socket = type { i32, i32 }
%struct.request_send = type { i32 }
%struct.write_buffer = type { i64 }

@SIZEOF_TCPBUFFER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socket_server*, %struct.socket*, %struct.request_send*)* @append_sendbuffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @append_sendbuffer(%struct.socket_server* %0, %struct.socket* %1, %struct.request_send* %2) #0 {
  %4 = alloca %struct.socket_server*, align 8
  %5 = alloca %struct.socket*, align 8
  %6 = alloca %struct.request_send*, align 8
  %7 = alloca %struct.write_buffer*, align 8
  store %struct.socket_server* %0, %struct.socket_server** %4, align 8
  store %struct.socket* %1, %struct.socket** %5, align 8
  store %struct.request_send* %2, %struct.request_send** %6, align 8
  %8 = load %struct.socket_server*, %struct.socket_server** %4, align 8
  %9 = load %struct.socket*, %struct.socket** %5, align 8
  %10 = getelementptr inbounds %struct.socket, %struct.socket* %9, i32 0, i32 1
  %11 = load %struct.request_send*, %struct.request_send** %6, align 8
  %12 = load i32, i32* @SIZEOF_TCPBUFFER, align 4
  %13 = call %struct.write_buffer* @append_sendbuffer_(%struct.socket_server* %8, i32* %10, %struct.request_send* %11, i32 %12)
  store %struct.write_buffer* %13, %struct.write_buffer** %7, align 8
  %14 = load %struct.write_buffer*, %struct.write_buffer** %7, align 8
  %15 = getelementptr inbounds %struct.write_buffer, %struct.write_buffer* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.socket*, %struct.socket** %5, align 8
  %18 = getelementptr inbounds %struct.socket, %struct.socket* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = sext i32 %19 to i64
  %21 = add nsw i64 %20, %16
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %18, align 4
  ret void
}

declare dso_local %struct.write_buffer* @append_sendbuffer_(%struct.socket_server*, i32*, %struct.request_send*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
